# Turtlebot_RL

./: package.xml  setup.cfg  setup.py
config/: apriltag.yaml  mapper_params_online_async.yaml  nav2_params.yaml
launch/: apriltag_control.launch.py  apriltag_node.launch.py  env.launch.py  localization.launch.py  rl.launch.py  slam.launch.py  tb3.launch.py  tb3_spawn.launch.py  tb3_state_pub.launch.py  yolo_control.launch.py
marvin2/: apriltag_control.py  marker_pose_node.py  marvin_pose_node.py  q_learning.py  spawn_marker_node.py  yolo_control.py
models/: marker.sdf  robot.urdf.xacro  tb3.sdf  tb3.urdf
worlds/: empty_world.sdf  world.world
